added glyphicons for check mark (ok) and x (no)

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 			<div class="row col-lg-12" id="sentence"></div>
 			<div class="row col-lg-12 text-center" id="feedback"></div>
 			<div class="row col-lg-12 text-center" id="target-letter">target-letter</div>
+            <span class="glyphicon glyphicon-ok"></span>
+            <span class="glyphicon glyphicon-remove"></span>
         </div>
         
         <!-- UPPER CASE LETTERS -->
